# zynthian-ui

./: README.md  zynthian.sh  zynthian_gui.py
zynautoconnect/: zynthian_autoconnect.py
zyngine/: zynthian_chain.py  zynthian_node.py
zyngui/: zynthian_gui_admin.py  zynthian_gui_control.py  zynthian_gui_layer.py  zynthian_gui_midi_recorder.py  zynthian_gui_mixer.py  zynthian_gui_preset.py  zynthian_gui_selector.py  zynthian_gui_stepsequencer.py  zynthian_gui_zynpad.py
zynlibs/api/: api.h
zynlibs/zynmidicontroller/: CMakeLists.txt  __init__.py  zynmidicontroller.cpp  zynmidicontroller.h  zynmidicontroller.py
zynlibs/zynseq/: CMakeLists.txt  sequence.cpp  sequencemanager.cpp  sequencemanager.h  zynseq.cpp  zynseq.h  zynseq.py
zynlibs/zynsmf/: CMakeLists.txt  smf.cpp  track.cpp  zynsmf.cpp  zynsmf.h
